@@ -1,0 +1,21 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "M. N. Afsar and J. B. Hasted. Measurements of the optical constants of liquid H<sub>2</sub>O and D<sub>2</sub>O between 6 and 450 cm<sup>−1</sup>, <a href=\"http://dx.doi.org/10.1364/JOSA.67.000902\"><i>J. Opt. Soc. Am.</i> <b>67</b>, 902-904 (1977)</a>"
+COMMENTS: "Heavy water (D<sub>2</sub>O) at 19.5 °C"
+DATA:
+  - type: tabulated nk
+    data: |
+        250.0 2.02 0.525
+        285.7 2.05 0.553
+        333.3 2.09 0.557
+        400.0 2.14 0.586
+        500.0 2.19 0.633
+        666.7 2.28 0.722
+        1000 2.43 0.915
+        2000 3.02 1.146
+INFO:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 19.5 °C
