@@ -1,0 +1,47 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "M. N. Afsar and J. B. Hasted. Measurements of the optical constants of liquid H<sub>2</sub>O and D<sub>2</sub>O between 6 and 450 cm<sup>−1</sup>, <a href=\"http://dx.doi.org/10.1364/JOSA.67.000902\"><i>J. Opt. Soc. Am.</i> <b>67</b>, 902-904 (1977)</a>"
+COMMENTS: "Liquid water (H<sub>2</sub>O) at 19 °C"
+DATA:
+  - type: tabulated nk
+    data: |
+        22.22 1.51 0.375
+        23.26 1.54 0.359
+        24.39 1.55 0.343
+        25.64 1.56 0.327
+        27.03 1.57 0.31
+        28.57 1.57 0.293
+        30.30 1.57 0.279
+        32.26 1.56 0.28
+        34.48 1.54 0.288
+        37.04 1.53 0.307
+        40.00 1.53 0.344
+        43.48 1.54 0.396
+        47.62 1.58 0.455
+        52.63 1.64 0.503
+        58.82 1.72 0.527
+        66.67 1.81 0.523
+        76.92 1.86 0.506
+        90.91 1.91 0.463
+        100.0 1.93 0.438
+        111.1 1.94 0.416
+        125.0 1.96 0.418
+        142.9 1.97 0.421
+        166.7 2.00 0.438
+        200.0 2.03 0.47
+        247.5 2.06 0.512
+        289.0 2.09 0.543
+        347.2 2.15 0.586
+        433.5 2.22 0.648
+        520.3 2.27 0.712
+        650.2 2.35 0.792
+        867.3 2.47 0.966
+        1041 2.56 1.06
+        1300 2.70 1.169
+        1733 3.05 1.393       
+INFO:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 19 °C
