@@ -3,8 +3,12 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "M. Daimon and A. Masumura. Measurement of the refractive index of distilled water from the near-infrared region to the ultraviolet region, <a href=\"http://dx.doi.org/10.1364/AO.46.003811\"><i>Appl. Opt.</i> <b>46</b>, 3811-3820 (2007)</a>"
-COMMENTS: "19.0 °C. High performance liquid chromatography (HPLC) distilled water. Refractive index is absolute (relative to vacuum). Wavelength is vacuum wavelength."
+COMMENTS: "High performance liquid chromatography (HPLC) distilled water at 19.0 °C."
 DATA:
   - type: formula 2
     range: 0.182 1.129
     coefficients: 0 5.672526103E-1 5.085550461E-3 1.736581125E-1 1.814938654E-2 2.121531502E-2 2.617260739E-2 1.138493213E-1 1.073888649E1
+INFO:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 19.0 °C
