@@ -3,8 +3,12 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "M. Daimon and A. Masumura. Measurement of the refractive index of distilled water from the near-infrared region to the ultraviolet region, <a href=\"http://dx.doi.org/10.1364/AO.46.003811\"><i>Appl. Opt.</i> <b>46</b>, 3811-3820 (2007)</a>"
-COMMENTS: "21.5 °C. High performance liquid chromatography (HPLC) distilled water. Refractive index is absolute (relative to vacuum). Wavelength is vacuum wavelength."
+COMMENTS: "High performance liquid chromatography (HPLC) distilled water at 21.5 °C."
 DATA:
   - type: formula 2
     range: 0.182 1.129
     coefficients: 0 5.689093832E-1 5.110301794E-3 1.719708856E-1 1.825180155E-2 2.062501582E-2 2.624158904E-2 1.123965424E-1 1.067505178E1
+INFO:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 21.5 °C
