@@ -3,8 +3,12 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "M. Daimon and A. Masumura. Measurement of the refractive index of distilled water from the near-infrared region to the ultraviolet region, <a href=\"http://dx.doi.org/10.1364/AO.46.003811\"><i>Appl. Opt.</i> <b>46</b>, 3811-3820 (2007)</a>"
-COMMENTS: "24.0 °C. High performance liquid chromatography (HPLC) distilled water. Refractive index is absolute (relative to vacuum). Wavelength is vacuum wavelength."
+COMMENTS: "High performance liquid chromatography (HPLC) distilled water at 24.0 °C."
 DATA:
   - type: formula 2
     range: 0.182 1.129
     coefficients: 0 5.666959820E-1 5.084151894E-3 1.731900098E-1 1.818488474E-2 2.095951857E-2 2.625439472E-2 1.125228406E-1 1.073842352E1
+INFO:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 24.0 °C
