@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "G. M. Hale and M. R. Querry. Optical Constants of Water in the 200-nm to 200-µm Wavelength Region, <a href=\"http://dx.doi.org/10.1364/AO.12.000555\"><i>Appl. Opt.</i> <b>12</b>, 555-563 (1973)</a>"
-COMMENTS: "25 °C"
+COMMENTS: "Liquid water (H<sub>2</sub>O) at 25 °C"
 DATA:
   - type: tabulated nk
     data: |
@@ -176,3 +176,5 @@ DATA:
         180 2.107 0.499
         190 2.119 0.501
         200 2.130 0.504
+INFO:
+    temperature: 25 °C
