@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "S. Kedenburg, M. Vieweg, T. Gissibl, and H. Giessen. Linear refractive index and absorption measurements of nonlinear optical liquids in the visible and near-infrared spectral region, <a href=\"http://dx.doi.org/10.1364/OME.2.001588\"><i>Opt. Mat. Express</i> <b>2</b>, 1588-1611 (2012)</a>"
-COMMENTS: "Distilled water, 20.0 °C."
+COMMENTS: "Distilled water at 20 °C."
 DATA:
   - type: formula 2
     range: 0.5 1.6
@@ -1142,3 +1142,5 @@ DATA:
         1.7475 8.49667e-05
         1.74875 8.461e-05
         1.75 8.43919e-05
+INFO:
+    temperature: 20 °C
